[package]
name = "f2web"
version = "1.0.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["json", "blocking"] }
tokio = { version = "1.0", features = ["full"] }
clap = { version = "4.0", features = ["derive"] }
scraper = "0.18"
url = "2.3"
fs_extra = "1.3"
colored = "2.0"
regex = "1.7"
indicatif = "0.17"
chrono = "0.4"
